Fix for intro images on IE
Issue #2

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -513,3 +513,12 @@ dl.article-info {
 .icon-heart:before {
 	color: #ff0000;
 }
+
+.is_internet.v_11 {
+
+	.blog .items-leading [class*='leading-'],
+	.blog-featured .items-leading [class*='leading-'],
+	.blog .items-row .item, .blog-featured .items-row .item {
+		display: block;
+	}
+}
